# MatrixProblems

./: CMakeLists.txt  MatrixProblems.pc.in  README  config.h.cmake  dune.module
cmake/modules/: CMakeLists.txt  FindMETIS.cmake  FindParMETIS.cmake
data/norne/: BlackoilRHS.vec  wellAdj.mtx
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/MatrixProblems/: CMakeLists.txt  MatrixProblems.hh
m4/: CMakeLists.txt  MatrixProblems.m4
src/: CMakeLists.txt  MatrixProblems.cc  amgCpr.cpp  amgCprCo2Test.cpp  amgCprGLCo2Test.cpp  amgCprGLTest.cpp  amgCprTest.cpp  amg_meassure.cpp  betterIOTest.cpp  betterIOTest2.cpp  blockMatComp.cpp  co2FS.cpp  doTwoPressureIndex.cpp  eclipseIO.cpp  flexibleSolver.cpp  jsonSolve.cpp  jsonSolveCO2.cpp  justPartition.cpp  lookAtStaircase.cpp  meassureComponents.cpp  multJsonSolve.cpp  multJsonSolveCO2.cpp  oneIterTest.cpp  readMatrixProduceInfo.cpp  singleHierarchyMultJsonSolve.cpp  singleHierarchyMultJsonSolveCO2.cpp  tunedAmg.cpp  tunedAmgCo2.cpp  twoLevelMethodTest.cpp  twoLevelMethodTestCO2.cpp  updateILU.cpp  wellReadAndSolve.cpp
src/generalDim/: GhostLastTest.hpp  amgCpr.hpp  jsonSolveGeneral.hpp  multJsonSolveGeneral.hpp  onlyAMG.hpp  singleHierarchymultJsonSolveGeneral.hpp  twoLevelMethod.hpp  updateTest.hpp
src/io/: dictRead.hpp  inputRead.hpp  wells.hpp
src/partition/: copyAndRemoveZeroTrans.hpp  evaluatePartition.hpp  flexibleSolverTimer.hpp  graphFunctions.hpp  meassureCommunication.hpp  meassureOperationsMinLoop.hpp  overlapCreation.hpp  setIndexSet.hpp  timeMultipleTimes.hpp
src/solveParallel/: amgSetup.hpp  buildLocalMatrix.hpp  compareSolutions.hpp  copyILU0.hpp  ghostLastOperations.hpp  nonQuadraticLocalMatrix.hpp  problem.hpp  reorder.hpp  solveSystem.hpp  wellSolveSystem.hpp
